seeded DB with new restaurants and created the show page with ability to read reviews of that restaurant

--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
-  <h1>Yelp Restaurants</h1>
+  <h1>Yelp!</h1>
   <ul>
     <% @restaurants.each do |restaurant| %>
-      <li><%= link_to restaurant.name, restaurant_path(restaurant) %></li>
+      <li><%= link_to restaurant.name, restaurant_path(restaurant) %> (<%= restaurant.category %>)</li>
     <% end %>
   </ul>
 </div>
