added link to add new restaurant. finished writing new and create actions in restaurants controller

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,1 +1,5 @@
-<h1>TO DO: navbar</h1>
+<div class="navbar">
+  <h1>Yelp! navbar (todo) </h1>
+  <%= link_to "Add a New Restaurant", new_restaurant_path %>
+</div>
+
