--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,8 @@
 // Specific CSS for your home-page
+.colored-wrapper {
+  background-color: #F78AE0;
+}
+
+.container {
+  background-color: #B0F566;
+}
