--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,8 @@
-<div class="navbar">
-  <h1>Yelp! navbar (todo) </h1>
-  <%= link_to "Add a New Restaurant", new_restaurant_path %>
+<div class="navbar-wagon">
+  <h1 class="header">Yelp!</h1>
+  <div class="navbar-wagon-right">
+    <%= link_to "Add a New Restaurant", new_restaurant_path, class: "navbar-wagon-link" %>
+  </div>
+
 </div>
 
