--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -8,6 +8,10 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  .header {
+    font-size: 30px;
+    margin: 0;
+  }
 }
 
 /* Logo */
