--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,7 +1,15 @@
-<div class="container">
-  <ul>
-    <% @restaurants.each do |restaurant| %>
-      <li><%= link_to restaurant.name, restaurant_path(restaurant) %> (<%= restaurant.category %>)</li>
-    <% end %>
-  </ul>
+<div class="colored-wrapper">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 col-md-8 col-md-offset-2">
+        <h2>Check out our Chinese, Japanese, French, Italian and Belgian restaurants!:</h2>
+        <ul class="list-unstyled">
+          <% @restaurants.each do |restaurant| %>
+          <li><%= link_to restaurant.name, restaurant_path(restaurant) %> (<%=  restaurant.category %>)</li>
+          <% end %>
+        </ul>
+      </div>
+    </div>
+  </div>
 </div>
+
