--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -4,7 +4,7 @@
   <%= simple_form_for [@restaurant, @review] do |f| %>
       <%= f.input :content %>
 
-      <%= f.input :rating%>
+      <%= f.input :rating, collection: 1..5 %>
 
       <%= f.button :button %>
   <% end %>
