--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,6 +1,7 @@
 // Specific CSS for your home-page
 .colored-wrapper {
-  background-color: #F78AE0;
+  background-color: #edeff0;
+  height: 100vh;
 }
 
 .container {
